<project xmlns="https://maven.apache.org/POM/4.0.0"
	xmlns:xsi="https://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="https://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>POMSeleniumAutomation</groupId>
	<artifactId>POMSeleniumTest</artifactId>
	<version>0.0.1-SNAPSHOT</version>

	<!-- Default property values; override on the command line e.g. -Dbrowser=firefox -->
	<properties>
		<browser>chrome</browser>
	</properties>

	<dependencies>
		<!--
		https://mvnrepository.com/artifact/org.seleniumhq.selenium/selenium-java -->
		<dependency>
			<groupId>org.seleniumhq.selenium</groupId>
			<artifactId>selenium-java</artifactId>
			<version>4.45.0</version>
		</dependency>

		<!--
		https://mvnrepository.com/artifact/io.github.bonigarcia/webdrivermanager -->
		<dependency>
			<groupId>io.github.bonigarcia</groupId>
			<artifactId>webdrivermanager</artifactId>
			<version>6.3.4</version>
		</dependency>

		<!-- https://mvnrepository.com/artifact/org.testng/testng -->
		<dependency>
			<groupId>org.testng</groupId>
			<artifactId>testng</artifactId>
			<version>7.12.0</version>
			<scope>compile</scope>
		</dependency>

		<!-- https://mvnrepository.com/artifact/org.apache.poi/poi -->
		<dependency>
			<groupId>org.apache.poi</groupId>
			<artifactId>poi</artifactId>
			<version>5.5.1</version>
		</dependency>

		<!-- https://mvnrepository.com/artifact/org.apache.poi/poi-ooxml -->
		<dependency>
			<groupId>org.apache.poi</groupId>
			<artifactId>poi-ooxml</artifactId>
			<version>5.5.1</version>
		</dependency>

		<!-- https://mvnrepository.com/artifact/org.apache.poi/poi-scratchpad -->
		<dependency>
			<groupId>org.apache.poi</groupId>
			<artifactId>poi-scratchpad</artifactId>
			<version>5.5.1</version>
		</dependency>

		<!-- https://mvnrepository.com/artifact/org.apache.poi/poi-ooxml-schemas -->
		<dependency>
			<groupId>org.apache.poi</groupId>
			<artifactId>poi-ooxml-schemas</artifactId>
			<version>4.1.2</version>
		</dependency>

		<!-- https://mvnrepository.com/artifact/org.apache.poi/ooxml-schemas -->
		<dependency>
			<groupId>org.apache.poi</groupId>
			<artifactId>ooxml-schemas</artifactId>
			<version>1.4</version>
		</dependency>

		<!-- https://mvnrepository.com/artifact/org.apache.poi/openxml4j -->
		<dependency>
			<groupId>org.apache.poi</groupId>
			<artifactId>openxml4j</artifactId>
			<version>1.0-beta</version>
		</dependency>

		<!-- https://mvnrepository.com/artifact/com.aventstack/extentreports -->
		<dependency>
			<groupId>com.aventstack</groupId>
			<artifactId>extentreports</artifactId>
			<version>5.1.2</version>
		</dependency>

		<!--
		https://mvnrepository.com/artifact/org.apache.logging.log4j/log4j-core -->
		<dependency>
			<groupId>org.apache.logging.log4j</groupId>
			<artifactId>log4j-core</artifactId>
			<version>2.26.1</version>
		</dependency>

		<!--
		https://mvnrepository.com/artifact/org.apache.logging.log4j/log4j-api -->
		<dependency>
			<groupId>org.apache.logging.log4j</groupId>
			<artifactId>log4j-api</artifactId>
			<version>2.26.1</version>
		</dependency>

		<!-- https://mvnrepository.com/artifact/io.rest-assured/rest-assured -->
		<dependency>
			<groupId>io.rest-assured</groupId>
			<artifactId>rest-assured</artifactId>
			<version>6.0.0</version>
		</dependency>

		<!--
		https://mvnrepository.com/artifact/com.googlecode.json-simple/json-simple -->
		<dependency>
			<groupId>com.googlecode.json-simple</groupId>
			<artifactId>json-simple</artifactId>
			<version>1.1.1</version>
		</dependency>

	</dependencies>
	<!-- ============================================================ -->
	<!-- Environment + Application Profiles                           -->
	<!--                                                              -->
	<!-- UI Tests:                                                    -->
	<!--   mvn clean test -Ppta-qa       (PTA - default)              -->
	<!--   mvn clean test -Pheroku-qa    (Heroku)                     -->
	<!--                                                              -->
	<!-- API Tests:                                                   -->
	<!--   mvn clean test -Pjsonplaceholder-qa  (JSONPlaceholder)     -->
	<!--                                                              -->
	<!-- Suffix any profile with -dev | -stage | -prod for envs.      -->
	<!-- Override browser (UI only): -Dbrowser=firefox | edge         -->
	<!-- ============================================================ -->
	<profiles>

		<!-- ── PTA UI profiles ───────────────────────────────────── -->
		<profile>
			<id>pta-dev</id>
			<properties>
				<app>pta</app>
				<env>dev</env>
				<suiteFile>src/main/resources/testng_pta_regression.xml</suiteFile>
			</properties>
		</profile>

		<profile>
			<id>pta-qa</id>
			<activation>
				<activeByDefault>true</activeByDefault>
			</activation>
			<properties>
				<app>pta</app>
				<env>qa</env>
				<suiteFile>src/main/resources/testng_pta_regression.xml</suiteFile>
			</properties>
		</profile>

		<profile>
			<id>pta-stage</id>
			<properties>
				<app>pta</app>
				<env>stage</env>
				<suiteFile>src/main/resources/testng_pta_regression.xml</suiteFile>
			</properties>
		</profile>

		<profile>
			<id>pta-prod</id>
			<properties>
				<app>pta</app>
				<env>prod</env>
				<suiteFile>src/main/resources/testng_pta_regression.xml</suiteFile>
			</properties>
		</profile>

		<!-- ── Heroku UI profiles ────────────────────────────────── -->
		<profile>
			<id>heroku-dev</id>
			<properties>
				<app>herokuapp</app>
				<env>dev</env>
				<suiteFile>src/main/resources/testng_herokuapp_regression.xml</suiteFile>
			</properties>
		</profile>

		<profile>
			<id>heroku-qa</id>
			<properties>
				<app>herokuapp</app>
				<env>qa</env>
				<suiteFile>src/main/resources/testng_herokuapp_regression.xml</suiteFile>
			</properties>
		</profile>

		<profile>
			<id>heroku-stage</id>
			<properties>
				<app>herokuapp</app>
				<env>stage</env>
				<suiteFile>src/main/resources/testng_herokuapp_regression.xml</suiteFile>
			</properties>
		</profile>

		<profile>
			<id>heroku-prod</id>
			<properties>
				<app>herokuapp</app>
				<env>prod</env>
				<suiteFile>src/main/resources/testng_herokuapp_regression.xml</suiteFile>
			</properties>
		</profile>

		<!-- ── JSONPlaceholder API profiles ─────────────────────── -->
		<profile>
			<id>jsonplaceholder-dev</id>
			<properties>
				<app>jsonplaceholder</app>
				<env>dev</env>
				<suiteFile>src/main/resources/testng_jsonplaceholder.xml</suiteFile>
			</properties>
		</profile>

		<profile>
			<id>jsonplaceholder-qa</id>
			<properties>
				<app>jsonplaceholder</app>
				<env>qa</env>
				<suiteFile>src/main/resources/testng_jsonplaceholder.xml</suiteFile>
			</properties>
		</profile>

		<profile>
			<id>jsonplaceholder-stage</id>
			<properties>
				<app>jsonplaceholder</app>
				<env>stage</env>
				<suiteFile>src/main/resources/testng_jsonplaceholder.xml</suiteFile>
			</properties>
		</profile>

		<profile>
			<id>jsonplaceholder-prod</id>
			<properties>
				<app>jsonplaceholder</app>
				<env>prod</env>
				<suiteFile>src/main/resources/testng_jsonplaceholder.xml</suiteFile>
			</properties>
		</profile>

	</profiles>

	<build>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.8.1</version>
				<configuration>
					<source>8</source>
					<target>8</target>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
				<version>3.5.2</version>
				<configuration>
					<suiteXmlFiles>
						<suiteXmlFile>${suiteFile}</suiteXmlFile>
					</suiteXmlFiles>
					<!-- Pass app, env, and browser to tests as JVM system properties -->
					<systemPropertyVariables>
						<app>${app}</app>
						<env>${env}</env>
						<browser>${browser}</browser>
					</systemPropertyVariables>
				</configuration>
			</plugin>
		</plugins>
	</build>
</project>
